--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,11 @@
             <version>1.4</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>r09</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -49,7 +53,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.github.luchesar.misc.Liquidator</mainClass>
+                            <mainClass>com.github.luchesar.misc.luquidate.LiquidatorMain</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -67,40 +71,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
-                <configuration>
-                    <includes>
-                        <include>**/*Test.java</include>
-                    </includes>
-                    <excludes>
-                        <exclude>**/*AcceptanceTest.java</exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.17</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <includes>
-                        <include>**/*AcceptanceTest.java</include>
-                    </includes>
-                    <systemPropertyVariables>
-                        <fatJarPath>${project.build.directory}/${project.artifactId}-${project.version}.jar</fatJarPath>
-                    </systemPropertyVariables>
-                </configuration>
             </plugin>
         </plugins>
     </build>
